# PepperPL-Unofficial-API-Service

./: .gitignore  README.md  pyproject.toml
api/: main.py  scraper.py
