[tool.poetry]
name = "pepper_pl_api"
version = "0.1.0"
description = ""
authors = ["SirCypkowskyy <dcyprian.a.gburek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
bs4 = "^0.0.1"
selenium = "^4.4.3"
chromedriver-binary = "^106.0.5249"
webdriver-manager = "^3.8.3"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

